refactor: remove root support and associated classes to transition to a fully non-rooted Shizuku-based architecture