@@ -1,10 +1,7 @@
 package com.gamespace.app.utils;
 
 import java.io.BufferedReader;
-import java.io.DataOutputStream;
 import java.io.InputStreamReader;
-import java.util.ArrayList;
-import java.util.List;
 
 public class ShellExecutor {
 
@@ -24,22 +21,17 @@ public class ShellExecutor {
         }
     }
 
-    public static CommandResult executeCommand(String command, boolean runAsRoot) {
+    public static CommandResult executeCommand(String command, boolean unused) {
+        return executeCommand(command);
+    }
+
+    public static CommandResult executeCommand(String command) {
         Process process = null;
-        DataOutputStream os = null;
         BufferedReader isReader = null;
         BufferedReader esReader = null;
 
         try {
-            if (runAsRoot) {
-                process = Runtime.getRuntime().exec("su");
-                os = new DataOutputStream(process.getOutputStream());
-                os.writeBytes(command + "\n");
-                os.writeBytes("exit\n");
-                os.flush();
-            } else {
-                process = Runtime.getRuntime().exec(new String[]{"sh", "-c", command});
-            }
+            process = Runtime.getRuntime().exec(new String[]{"sh", "-c", command});
 
             StringBuilder stdout = new StringBuilder();
             StringBuilder stderr = new StringBuilder();
@@ -62,16 +54,10 @@ public class ShellExecutor {
             return new CommandResult(-1, "", e.getMessage() != null ? e.getMessage() : "Execution exception");
         } finally {
             try {
-                if (os != null) os.close();
                 if (isReader != null) isReader.close();
                 if (esReader != null) esReader.close();
                 if (process != null) process.destroy();
             } catch (Exception ignored) {}
         }
-    }
-
-    public static boolean isRootAvailable() {
-        CommandResult result = executeCommand("id", true);
-        return result.isSuccess() && result.stdout.contains("uid=0");
     }
 }
